// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`getEnvironment isolated scenarios given: detectable signals when: filled() is called then: returns Environment and matches snapshot 1`] = `
{
  "access": "prod",
  "commit": "v1.2.3@abc123",
  "config": "prod",
  "server": "cloud@aws.lambda",
}
`;

exports[`getEnvironment isolated scenarios given: detectable signals when: getEnvironment() is called directly then: returns Environment (README contract) 1`] = `
{
  "access": "prod",
  "commit": "v1.2.3@abc123",
  "config": "prod",
  "server": "cloud@aws.lambda",
}
`;

exports[`getEnvironment isolated scenarios given: detectable signals when: static() is called then: returns Environment and matches snapshot 1`] = `
{
  "access": "prod",
  "commit": "v1.2.3@abc123",
  "config": "prod",
  "server": "cloud@aws.lambda",
}
`;

exports[`getEnvironment isolated scenarios given: invalid parser output when: filled() returns invalid access then: throws validation error with snapshot 1`] = `"BadRequestError: invalid access value: "invalid". parser: parser[0]"`;

exports[`getEnvironment isolated scenarios given: invalid parser output when: filled() returns invalid commit then: throws validation error with snapshot 1`] = `"BadRequestError: invalid commit value: "invalid". parser: parser[0]"`;

exports[`getEnvironment isolated scenarios given: invalid parser output when: static() returns invalid server then: throws validation error with snapshot 1`] = `"BadRequestError: invalid server value: "local". parser: parser[0]"`;

exports[`getEnvironment isolated scenarios given: no signals when: filled() is called with empty parsers then: throws error with snapshot message 1`] = `"UnexpectedCodePathError: could not derive access. tried parsers: parser[0]"`;

exports[`getEnvironment isolated scenarios given: no signals when: static() is called with empty parsers then: throws error with snapshot message 1`] = `"UnexpectedCodePathError: could not derive access. tried parsers: parser[0]"`;

exports[`getEnvironment journey: config attribute scenarios given: [case3] config attribute behavior when: [t0] CONFIG envar is set then: config comes from CONFIG envar 1`] = `
{
  "access": "prep",
  "commit": "main@abc123",
  "config": "test",
  "server": "local@unix",
}
`;

exports[`getEnvironment journey: config attribute scenarios given: [case3] config attribute behavior when: [t1] CONFIG envar with extended slug then: config includes extended slug 1`] = `
{
  "access": "prod",
  "commit": "v1.0.0@abc123",
  "config": "prod:v2023",
  "server": "cloud@aws.lambda",
}
`;

exports[`getEnvironment journey: config attribute scenarios given: [case3] config attribute behavior when: [t2] prep access with NODE_ENV=test (no CONFIG) then: config defaults to test via NODE_ENV 1`] = `
{
  "access": "prep",
  "commit": "ci@build123",
  "config": "test",
  "server": "local@cicd",
}
`;

exports[`getEnvironment journey: config attribute scenarios given: [case3] config attribute behavior when: [t3] prep access without CONFIG or NODE_ENV=test then: config defaults to access tier 1`] = `
{
  "access": "prep",
  "commit": "deploy@xyz789",
  "config": "prep",
  "server": "cloud@aws.ecs",
}
`;

exports[`getEnvironment journey: config attribute scenarios given: [case3] config attribute behavior when: [t4] prod access always gets prod config then: config is prod regardless of NODE_ENV 1`] = `
{
  "access": "prod",
  "commit": "v2.0.0@prod456",
  "config": "prod",
  "server": "cloud@aws.lambda",
}
`;

exports[`getEnvironment journey: config attribute scenarios given: [case3] config attribute behavior when: [t5] config/access mismatch error then: throws when prod access has test config 1`] = `
"BadRequestError: config must start with 'prod' when access is 'prod'. got: "test"

{
  "access": "prod",
  "config": "test"
}"
`;

exports[`getEnvironment journey: config attribute scenarios given: [case3] config attribute behavior when: [t6] custom config parser provided then: custom parser takes precedence 1`] = `
{
  "access": "prep",
  "commit": "v1.0.0@abc123",
  "config": "test:local",
  "server": "local@unix",
}
`;

exports[`getEnvironment journey: config attribute scenarios given: [case3] config attribute behavior when: [t7] custom config parser with fromEnvar then: fromEnvar reads custom config envar 1`] = `
{
  "access": "prep",
  "commit": "deploy@xyz789",
  "config": "prep:canary",
  "server": "cloud@aws.ecs",
}
`;

exports[`getEnvironment journey: config attribute scenarios given: [case3] config attribute behavior when: [t8] invalid config value then: throws validation error 1`] = `"BadRequestError: invalid config value: "invalid". parser: parser[0]"`;

exports[`getEnvironment journey: custom parser configuration given: [case2] developer uses custom parsers when: [t0] custom access parser provided then: custom parser runs instead of defaults 1`] = `
{
  "access": "prep",
  "commit": "deploy@xyz789",
  "config": "prep",
  "server": "cloud@aws.ecs",
}
`;

exports[`getEnvironment journey: custom parser configuration given: [case2] developer uses custom parsers when: [t2] only access parser customized then: server uses default parsers 1`] = `
{
  "access": "test",
  "commit": "ci@build123",
  "config": "test",
  "server": "local@cicd",
}
`;

exports[`getEnvironment journey: custom parser configuration given: [case2] developer uses custom parsers when: [t3] all custom parsers return null then: throws with parser names in error 1`] = `"UnexpectedCodePathError: could not derive access. tried parsers: parser[0], parser[1], parser[2]"`;

exports[`getEnvironment journey: custom parser configuration given: [case2] developer uses custom parsers when: [t4] fromEnvar factory used in custom parsers then: fromEnvar reads custom envar names 1`] = `
{
  "access": "prod",
  "commit": "v3.0.0@custom123",
  "config": "prod",
  "server": "cloud@aws.lambda",
}
`;

exports[`getEnvironment journey: custom parser configuration given: [case2] developer uses custom parsers when: [t5] factory parsers fail with named error messages then: error includes factory parser names 1`] = `"UnexpectedCodePathError: could not derive access. tried parsers: fromEnvar(NONEXISTENT_ACCESS), fromAwsAccountAlias, fromNodeEnv"`;

exports[`getEnvironment journey: custom parser configuration given: [case2] developer uses custom parsers when: [t6] fromAwsAccountName factory used in parser chain then: error includes fromAwsAccountName parser name 1`] = `"UnexpectedCodePathError: could not derive access. tried parsers: fromEnvar(NONEXISTENT_ACCESS), fromAwsAccountAlias, fromAwsAccountName, fromNodeEnv"`;

exports[`getEnvironment journey: custom parser configuration given: [case2] developer uses custom parsers when: [t7] alias returns null, name parser is fallback then: fallback chain includes both alias and name parsers 1`] = `"UnexpectedCodePathError: could not derive access. tried parsers: fromAwsAccountAlias, fromAwsAccountName"`;

exports[`getEnvironment journey: developer integration workflow given: [case1] developer integrates sdk-environment when: [t0] app starts without environment configured then: filled() throws descriptive error 1`] = `"UnexpectedCodePathError: could not derive access. tried parsers: parser[0]"`;

exports[`getEnvironment journey: developer integration workflow given: [case1] developer integrates sdk-environment when: [t1] developer sets ACCESS=prod envar then: filled() succeeds with Environment 1`] = `
{
  "access": "prod",
  "commit": "main@abc123",
  "config": "prod",
  "server": "local@unix",
}
`;

exports[`getEnvironment journey: developer integration workflow given: [case1] developer integrates sdk-environment when: [t3] developer forces fresh parse { cache: skip } then: returns fresh Environment 1`] = `
{
  "access": "prep",
  "commit": "feat/auth@def456",
  "config": "prep",
  "server": "local@cicd",
}
`;

exports[`getEnvironment journey: developer integration workflow given: [case1] developer integrates sdk-environment when: [t4] developer uses static() for sync context then: returns sync-parsed Environment 1`] = `
{
  "access": "test",
  "commit": "main@ghi789",
  "config": "test",
  "server": "local@unix",
}
`;
